// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snippet > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_oneLine__1rq9p69d styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <pre
            class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
            style="--whiteSpace__1eu8od81: nowrap; --_1rq9p690: 4;"
          >
            <span
              class="styles__1rq9p696 styles_multiline_false__1rq9p697"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__1rq9p69h styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_multiline__1rq9p69c styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <div
            class="styles__o338i11"
            data-is-animated="false"
            style="--o338i10: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
              style="--_1rq9p690: 4;"
            >
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__1rq9p69g styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__1rq9p69i"
          >
            <button
              aria-expanded="false"
              class="styles__1rq9p69k"
              type="button"
            >
              <span
                class="styles__1rq9p69l style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                Show 
                <svg
                  class="styles_false__1rq9p69m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline with prefix command 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_multiline__1rq9p69c styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <div
            class="styles__o338i11"
            data-is-animated="false"
            style="--o338i10: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
              style="--_1rq9p690: 4;"
            >
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_command__1rq9p699"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_command__1rq9p699"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_command__1rq9p699"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_command__1rq9p699"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_command__1rq9p699"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_command__1rq9p699"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_command__1rq9p699"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__1rq9p69g styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__1rq9p69i"
          >
            <button
              aria-expanded="false"
              class="styles__1rq9p69k"
              type="button"
            >
              <span
                class="styles__1rq9p69l style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                Show 
                <svg
                  class="styles_false__1rq9p69m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline with prefix lines number 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_multiline__1rq9p69c styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <div
            class="styles__o338i11"
            data-is-animated="false"
            style="--o338i10: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
              style="--_1rq9p690: 4;"
            >
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_lines__1rq9p69a"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_lines__1rq9p69a"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_lines__1rq9p69a"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_lines__1rq9p69a"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_lines__1rq9p69a"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_lines__1rq9p69a"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698 styles_lines__1rq9p69a"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__1rq9p69g styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__1rq9p69i"
          >
            <button
              aria-expanded="false"
              class="styles__1rq9p69k"
              type="button"
            >
              <span
                class="styles__1rq9p69l style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                Show 
                <svg
                  class="styles_false__1rq9p69m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with copiedText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_oneLine__1rq9p69d styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <pre
            class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
            style="--whiteSpace__1eu8od81: nowrap; --_1rq9p690: 4;"
          >
            <span
              class="styles__1rq9p696 styles_multiline_false__1rq9p697"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__1rq9p69h styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with copyText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_oneLine__1rq9p69d styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <pre
            class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
            style="--whiteSpace__1eu8od81: nowrap; --_1rq9p690: 4;"
          >
            <span
              class="styles__1rq9p696 styles_multiline_false__1rq9p697"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__1rq9p69h styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with custom number of rows 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_multiline__1rq9p69c styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <pre
            class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
            style="--_1rq9p690: 12;"
          >
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            />
          </pre>
          <div
            class="styles_multiline__1rq9p69g styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with helper  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_multiline__1rq9p69c styles__1rq9p69b"
      >
        <div
          aria-describedby="_r_36_"
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <div
            class="styles__o338i11"
            data-is-animated="false"
            style="--o338i10: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
              style="--_1rq9p690: 4;"
            >
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__1rq9p69g styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__1rq9p69i"
          >
            <button
              aria-expanded="false"
              class="styles__1rq9p69k"
              type="button"
            >
              <span
                class="styles__1rq9p69l style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                Show 
                <svg
                  class="styles_false__1rq9p69m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_36_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with hideText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_multiline__1rq9p69c styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <div
            class="styles__o338i11"
            data-is-animated="false"
            style="--o338i10: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
              style="--_1rq9p690: 4;"
            >
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__1rq9p69g styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__1rq9p69i"
          >
            <button
              aria-expanded="false"
              class="styles__1rq9p69k"
              type="button"
            >
              <span
                class="styles__1rq9p69l style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                Show 
                <svg
                  class="styles_false__1rq9p69m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with initiallyExpanded 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_multiline__1rq9p69c styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <div
            class="styles__o338i11"
            data-is-animated="false"
            style="--o338i10: 300ms;"
          >
            <pre
              class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
              style="--_1rq9p690: 4;"
            >
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__1rq9p69g styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_true__1rq9p69j"
          >
            <button
              aria-expanded="true"
              class="styles__1rq9p69k"
              type="button"
            >
              <span
                class="styles__1rq9p69l style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                Hide 
                <svg
                  class="styles_true__1rq9p69n uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with label  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <label
        class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
      >
        label
      </label>
      <div
        class="styles_multiline__1rq9p69c styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <div
            class="styles__o338i11"
            data-is-animated="false"
            style="--o338i10: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
              style="--_1rq9p690: 4;"
            >
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__1rq9p69g styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__1rq9p69i"
          >
            <button
              aria-expanded="false"
              class="styles__1rq9p69k"
              type="button"
            >
              <span
                class="styles__1rq9p69l style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                Show 
                <svg
                  class="styles_false__1rq9p69m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with labelDescription 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
      >
        <label
          class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        >
          label
        </label>
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            InformationIcon
          </title>
          <path
            clip-rule="evenodd"
            d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0M9 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0M6.75 8a.75.75 0 0 0 0 1.5h.75v1.75a.75.75 0 0 0 1.5 0v-2.5A.75.75 0 0 0 8.25 8z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="styles_multiline__1rq9p69c styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <div
            class="styles__o338i11"
            data-is-animated="false"
            style="--o338i10: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
              style="--_1rq9p690: 4;"
            >
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__1rq9p69g styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__1rq9p69i"
          >
            <button
              aria-expanded="false"
              class="styles__1rq9p69k"
              type="button"
            >
              <span
                class="styles__1rq9p69l style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                Show 
                <svg
                  class="styles_false__1rq9p69m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with noExpandable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_multiline__1rq9p69c styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <pre
            class="styles__1rq9p691 styles_noExpandable_true__1rq9p693 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
            style="--_1rq9p690: 4;"
          >
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__1rq9p696 styles_multiline_true__1rq9p698"
            />
          </pre>
          <div
            class="styles_multiline__1rq9p69g styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with showText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_multiline__1rq9p69c styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <div
            class="styles__o338i11"
            data-is-animated="false"
            style="--o338i10: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
              style="--_1rq9p690: 4;"
            >
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__1rq9p69g styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__1rq9p69i"
          >
            <button
              aria-expanded="false"
              class="styles__1rq9p69k"
              type="button"
            >
              <span
                class="styles__1rq9p69l style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                Test 
                <svg
                  class="styles_false__1rq9p69m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with single line with prefix command 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_oneLine__1rq9p69d styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <pre
            class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
            style="--whiteSpace__1eu8od81: nowrap; --_1rq9p690: 4;"
          >
            <span
              class="styles__1rq9p696 styles_multiline_false__1rq9p697 styles_command__1rq9p699"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__1rq9p69h styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with single line with prefix lines number 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_oneLine__1rq9p69d styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <pre
            class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
            style="--whiteSpace__1eu8od81: nowrap; --_1rq9p690: 4;"
          >
            <span
              class="styles__1rq9p696 styles_multiline_false__1rq9p697 styles_lines__1rq9p69a"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__1rq9p69h styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > should click on extend button to display full content on  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles_multiline__1rq9p69c styles__1rq9p69b"
      >
        <div
          class="styles__1rq9p69e styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
        >
          <div
            class="styles__o338i11"
            data-is-animated="true"
            style="--o338i10: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__1rq9p691 styles_noExpandable_false__1rq9p692 styles_showMore_false__1rq9p694 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a"
              style="--_1rq9p690: 4;"
            >
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__1rq9p696 styles_multiline_true__1rq9p698"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__1rq9p69g styles__1rq9p69f"
          >
            <div
              class="styles__1u0cyic5"
            >
              <button
                aria-label="Copy"
                class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CopyContentIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_true__1rq9p69j"
          >
            <button
              aria-expanded="true"
              class="styles__1rq9p69k"
              type="button"
            >
              <span
                class="styles__1rq9p69l style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                Hide 
                <svg
                  class="styles_true__1rq9p69n uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
